--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="te">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>తెలుగు బిజినెస్ వెబ్‌సైట్</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <header>
+    <h1>VISri Freelancing సర్వీసులు</h1>
+    <nav>
+      <ul>
+        <li><a href="#services">సేవలు</a></li>
+        <li><a href="#about">గురించి</a></li>
+        <li><a href="#contact">సంప్రదించండి</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>మీ బిజినెస్ కోసం కస్టమ్ వెబ్‌సైట్ తయారు చేయబడింది</h2>
+    <p>HTML, CSS మరియు JavaScriptతో పూర్తి స్పందనతో కూడిన డిజైన్</p>
+  </section>
+
+  <section id="services">
+    <h3>మా సేవలు</h3>
+    <ul>
+      <li>బిజినెస్ వెబ్‌సైట్లు</li>
+      <li>ప్రొడక్ట్ లాండింగ్ పేజీలు</li>
+      <li>ప్రొఫెషనల్ UI డిజైన్</li>
+    </ul>
+  </section>
+
+  <section id="about">
+    <h3>మా గురించి</h3>
+    <p>VISri Freelancing మీరు నమ్మవచ్చు – స్థిరమైన, వేగవంతమైన, ప్రాంతీయ మద్దతుతో కూడిన వెబ్ సొల్యూషన్స్.</p>
+  </section>
+
+  <section id="contact">
+    <h3>సంప్రదించండి</h3>
+    <form>
+      <input type="text" placeholder="పేరు" required/>
+      <input type="email" placeholder="ఇమెయిల్" required/>
+      <textarea placeholder="సందేశం" required></textarea>
+      <button type="submit">పంపండి</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>© 2025 VISri Freelancing. అన్ని హక్కులూ కాపురించబడ్డాయి.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
